k8s/deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: mission-control
  labels: 
    app: mission-control 
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingupdate:
      maxUnavailable: 1 # at most 1 pod can be down during update 
      maxSurge: 1 # at most 1 extra pod can exist during update
  selector:
    matchLabels:
      app: mission-control 
  template:
    metadata:
      labels:
        app: mission-control 
    spec:
      containers:
      - name: mission-control
        image: tonyb23/k3s-mission-control:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: app-storage
          mountPath: /app/data # path inside the container
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
      volumes:
      - name: app-storage 
        persistentVolumeClaim:
          claimName: mission-control-pvc
