k8s/service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: mission-control-service 
spec:
  type: NodePort 
  selector:
    app: mission-control 
  ports:
  - protocol: TCP 
    port: 80 
    targetPort: 3000
    nodePort: 30080
